make sure asset is wrapped in picture el

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -615,6 +615,7 @@
         }
 
         &-asset {
+            display: block;
             margin-bottom: 2em;
 
             &-img {
